# openvino_model_splitter

./: .gitignore  CMakeLists.txt  README.md  insert_fq.py  main.cpp  matmul_test.cpp  ov_model_splitter.cpp
configs/: inputs.config  outputs.config
ov_utils/: ov_folding.py
